<resources>
    <string name="app_name">MP</string>

    //All text abstracted, for translation
    <string name="add_product">Add Product</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="product">Product</string>
    <string name="amount">Amount</string>
    <string name="amount_abbrev">Amt</string>
    <string name="search_products">Search Products</string>
    <string name="search">Search</string>
    <string name="show_all_products">Show All Products</string>
    <string name="field_required">This field is required!</string>
    <string name="filter_and_order">Filter and Order</string>
    <string name="secondary_location">Secondary location</string>
    <string name="order_alphabet">Order alphabetically</string>
</resources>
