<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/order_alphabet"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="always"
        android:title="@string/order_alphabet" />

    <item
        android:id="@+id/action_filter_and_order"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always"
        android:title="@string/filter_and_order" />

    <item
        android:id="@+id/action_add_product"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/add_product" />

    <item
        android:id="@+id/action_search_products"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/search_products" />

    <item
        android:id="@+id/action_show_all"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="always"
        android:title="@string/show_all_products" />

</menu>