<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical">
    
    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:text="@string/product"/>

    <TextView
        android:id="@+id/product_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/product_amount_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/product_amount"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:text="@string/amount_abbrev"/>

    <TextView
        android:id="@+id/product_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/product_delete"
        android:paddingLeft="3sp"
        android:paddingRight="10sp"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:text="@string/amount"/>

    <Button
        android:id="@+id/product_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="deleteProduct"
        android:text="X"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>